# bmad-method-practice

./: .gitignore  README.md  pixi.toml
.github/: copilot-instructions.md
_bmad/: config.toml
_bmad-output/brainstorming/: brainstorming-session-2026-04-26-115639.md
_bmad-output/implementation-artifacts/: 1-0-bootstrap-habitflow-workspace-and-pixi-feature-environments.md  1-1-create-habit-with-tiered-completion-definition.md  1-2-edit-habit-configuration-safely.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-26.md  prd.md  product-brief-bmad-method-practice-distillate.md  product-brief-bmad-method-practice.md  sprint-change-proposal-2026-04-26.md  sprint-planning-kickoff-summary-2026-04-26.md  ux-color-themes.html  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/custom/: .gitignore
docs/: bmad_copilot_pixi_vscode_novice_to_expert.md
habitflow-web/: README.md  pixi.toml
habitflow-web/backend/: README.md  pixi.toml  pyproject.toml
habitflow-web/backend/src/apps/: __init__.py
habitflow-web/backend/src/apps/habits/: __init__.py  api.py  models.py  repository.py  service.py
habitflow-web/backend/src/habitflow/: __init__.py
habitflow-web/backend/test/: conftest.py  test_bootstrap.py
habitflow-web/backend/test/unit/: test_story_1_1_habit_creation.py
habitflow-web/frontend/: .eslintignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
habitflow-web/frontend/src/: App.d.ts  App.d.ts.map  App.js  App.js.map  App.tsx  index.css  main.js  main.js.map
habitflow-web/frontend/test/: bootstrap.test.tsx  (+1 more)
project-01/: pixi.toml
project-02/: pixi.toml
(+13 files in other folders)
