[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habitflow-backend"
version = "0.1.0"
description = "Backend for HabitFlow habit tracking application"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Kevin Mills", email = "millsks@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.1.0",
    "black>=23.0",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/habitflow"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["habitflow"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = true
warn_unused_ignores = true
enable_error_code = ["redundant-expr", "truthy-bool", "used-before-def"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["venv", ".pixi"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.git
  | \.venv
  | \.pixi
  | build
  | dist
)/
'''
